@@ -1,5 +1,11 @@
 2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
 
+	* unichrome/via_driver.c: (VIALeaveVT):
+
+	Force 3D context upload after a VT switch.
+	
+2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
+
 	* unichrome/via_dri.c: (viaDRIFBMemcpy), (viaDRIOffscreenSave):
 
 	Fix up previous commit for > 16MB sizes. 
